feat: udistrital/sga_documentacion#180 Adición del endpoint para recuperar la información de legalización de matricula de un aspirante y su respectiva logica en services
