# controllers/legalizacion.go
@@ -6,8 +6,10 @@ import (
 	"reflect"
 
 	"github.com/astaxie/beego"
+	"github.com/udistrital/sga_inscripcion_mid/services"
 	"github.com/udistrital/sga_inscripcion_mid/utils"
 	requestmanager "github.com/udistrital/sga_inscripcion_mid/utils"
+	"github.com/udistrital/utils_oas/errorhandler"
 	"github.com/udistrital/utils_oas/request"
 )
 
@@ -18,11 +20,8 @@ type LegalizacionController struct {
 
 // URLMapping ...
 func (c *LegalizacionController) URLMapping() {
-	c.Mapping("Post", c.Post)
-	c.Mapping("GetOne", c.GetOne)
-	c.Mapping("GetAll", c.GetAll)
-	c.Mapping("Put", c.Put)
-	c.Mapping("Delete", c.Delete)
+	c.Mapping("Post", c.PostBaseLegalizacionMatricula)
+	c.Mapping("GetInfoLegalizacionMatricula", c.GetInfoLegalizacionMatricula)
 }
 
 // PostBaseLegalizacionMatricula ...
@@ -268,52 +267,26 @@ func createInfoComplementaria(infoCompBody map[string]interface{}) (map[string]i
 	}
 }
 
-// GetOne ...
-// @Title GetOne
-// @Description get Legalizacion by id
-// @Param	id		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.Legalizacion
-// @Failure 403 :id is empty
-// @router /:id [get]
-func (c *LegalizacionController) GetOne() {
+// GetInfoLegalizacionMatricula ...
+// @Title GetInfoLegalizacionMatricula
+// @Description consultar la información complementaria del tercero
+// @Param	persona_id	path	int	true	"Id del tercero"
+// @Success 200 {}
+// @Failure 404 not found resource
+// @router  /informacion-legalizacion/:persona_id [get]
+func (c *LegalizacionController) GetInfoLegalizacionMatricula() {
+	defer errorhandler.HandlePanic(&c.Controller)
 
-}
+	//Id de la persona
+	persona_id := c.Ctx.Input.Param(":persona_id")
+	fmt.Println("PERSONA ID:")
+	fmt.Println(persona_id)
 
-// GetAll ...
-// @Title GetAll
-// @Description get Legalizacion
-// @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
-// @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
-// @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
-// @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
-// @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
-// @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.Legalizacion
-// @Failure 403
-// @router / [get]
-func (c *LegalizacionController) GetAll() {
+	respuesta := services.GetInfoLegalizacionTercero(persona_id)
 
-}
+	c.Ctx.Output.SetStatus(respuesta.Status)
 
-// Put ...
-// @Title Put
-// @Description update the Legalizacion
-// @Param	id		path 	string	true		"The id you want to update"
-// @Param	body		body 	models.Legalizacion	true		"body for Legalizacion content"
-// @Success 200 {object} models.Legalizacion
-// @Failure 403 :id is not int
-// @router /:id [put]
-func (c *LegalizacionController) Put() {
+	c.Data["json"] = respuesta
 
-}
-
-// Delete ...
-// @Title Delete
-// @Description delete the Legalizacion
-// @Param	id		path 	string	true		"The id you want to delete"
-// @Success 200 {string} delete success!
-// @Failure 403 id is empty
-// @router /:id [delete]
-func (c *LegalizacionController) Delete() {
-
+	c.ServeJSON()
 }
