# swagger/swagger.yml
@@ -769,6 +769,42 @@ paths:
           description: '{}'
         "403":
           description: body is empty
+  /legalizacion/base:
+    post:
+      tags:
+      - legalizacion
+      description: create Legalizacion
+      operationId: LegalizacionController.PostBaseLegalizacionMatricula
+      parameters:
+      - in: body
+        name: body
+        description: body for Legalizacion content
+        required: true
+        schema:
+          $ref: '#/definitions/{}'
+      responses:
+        "201":
+          description: '{int}'
+        "400":
+          description: the request contains incorrect syntax
+  /legalizacion/informacion-legalizacion/{persona_id}:
+    get:
+      tags:
+      - legalizacion
+      description: consultar la información complementaria del tercero
+      operationId: LegalizacionController.GetInfoLegalizacionMatricula
+      parameters:
+      - in: path
+        name: persona_id
+        description: Id del tercero
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: '{}'
+        "404":
+          description: not found resource
   /recibos/comprobante-inscripcion:
     post:
       tags:
@@ -915,7 +951,7 @@ paths:
         description: body for Transferencia_reingreso content
         required: true
         schema:
-          $ref: '#/definitions/helpers.Transferencia_reingreso'
+          $ref: '#/definitions/{}'
       responses:
         "201":
           description: ""
@@ -1126,3 +1162,6 @@ tags:
 - name: transferencia
   description: |
     Transferencia_reingresoController operations for Transferencia_reingreso
+- name: legalizacion
+  description: |
+    LegalizacionController operations for Legalizacion
